# crewai

./: .gitignore  README.md  final_requirements_analysis_report.md  pyproject.toml
src/my_ai_crew/: crew.py  main.py
src/requirements_taker_crew/: __init__.py  crew.py  main.py  questionnaire.yaml
src/requirements_taker_crew/config/: agents.yaml  tasks.yaml
src/requirements_taker_crew/tools/: __init__.py  google_drive_tool.py
tests/: test_gdrive.py
